--- a/src/app.scss
+++ b/src/app.scss
@@ -1,11 +1,15 @@
-* {
+/* global.css */
+body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: "Arial", sans-serif;
+  overflow-x: hidden;
 }
-.app {
+
+.main-container {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
-  background-color: lime;
+  min-height: 100vh;
 }
