--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -6,19 +6,23 @@
   width: 40%;
   height: 100vh;
   display: flex;
-  flex-direction: row-reverse;
+  //flex-direction: row-reverse;
+  flex-direction: row;
 }
 
 .menu__list {
   list-style: none;
-  padding-right: 10px;
+  // padding-right: 7vw;
 }
-.menu__item {
-  padding-bottom: 20px;
-}
+
 .menu__item:first-child {
   padding-top: 10px;
 }
+
+.menu__item {
+  padding-bottom: 20px;
+}
+
 .menu--open {
   animation: openMenu 0.5s ease 0s 1 normal forwards;
 }
