--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
 /* global.css */
+@import "./variables.scss";
 body {
   margin: 0;
   padding: 0;
@@ -12,4 +13,17 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+.accent {
+  color: $accent;
+}
+.icons {
+  color: beige;
+  width: clamp(2.5rem, -0.3rem + 5.8vw, 4rem);
+  height: 100%;
+}
+.icons--dark {
+  color: $darkerMain;
+  width: clamp(2.5rem, -0.3rem + 5.8vw, 4rem);
+  height: 100%;
 }
