fix typo and clear dead code

--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -7,7 +7,7 @@
 }
 
 .about--title {
-  border-width: 0px 0px 3px 0px; /* top right bottom left */
+  border-width: 0px 0px 3px 0px;
   border-style: solid;
   border-color: $accent;
   display: inline;
