--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: clamp(1rem, -0.2727rem + 5.8182vw, 3rem);
+  font-size: clamp(1.5rem, -0.2727rem + 5vw, 2.2rem);
 }
 .header--accent {
   color: $accent;
@@ -22,11 +22,11 @@
 
 .header__menuButton--close {
   height: 100%;
-  width: 20vw;
+  width: 100px;
   color: $accent;
 }
 .header__menuButton--open {
   height: 80%;
-  width: 20vw;
+  width: 100px;
   color: $accent;
 }
