--- a/src/Components/Welcome/welcome.scss
+++ b/src/Components/Welcome/welcome.scss
@@ -1,6 +1,7 @@
 @import "../../variables.scss";
 
 .welcome {
+  font-size: clamp(1rem, 4.8vw, 2rem);
   background-color: $darkerMain;
   padding: 3vw;
 }
@@ -13,6 +14,14 @@
   color: $accent;
 }
 .welcome--text {
+  font-size: clamp(1rem, 4.3vw, 2rem);
+  color: beige;
+}
+.welcome--skillList {
+  font-size: clamp(1rem, 4.3vw, 2rem);
+  padding: 0 0 0 3vw;
+  display: flex;
+  justify-content: space-between;
   color: beige;
 }
 
@@ -22,14 +31,14 @@
 
 .welcome__socialContainer {
   margin: 3vh 0;
-  width: 30vw;
+  width: 120px;
   display: flex;
   flex-direction: column;
 }
 
 .welcome--socialIcons {
   color: beige;
-  width: clamp(2.5rem, -0.3rem + 5.8vw, 4rem);
+  width: clamp(2.5rem, -0.3rem + 5.8vw, 3.5rem);
   height: 100%;
 }
 
@@ -44,4 +53,27 @@
   margin-top: 1vh;
   background-color: $main;
   color: beige;
+  font-size: clamp(1rem, 4.8vw, 2rem);
+}
+
+@media screen and (min-width: 600px) {
+  .welcome {
+    font-size: 2rem;
+    background-color: $darkerMain;
+    padding: 6vw;
+    display: flex;
+    justify-content: space-between;
+  }
+  .welcome--pics {
+    width: 50%;
+    object-fit: contain;
+    margin-top: -6vh;
+  }
+  .welcome__socialContainer {
+    width: 200px;
+    margin: 5vh 0;
+  }
+  /*   .welcome--button {
+    font-size: 1.5rem;
+  } */
 }
