--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -18,10 +18,6 @@
   margin: 0;
   padding: 0;
 }
-.about--p {
-  margin: 0;
-  padding: 0;
-}
 
 .about__skills {
   margin: 1vw;
@@ -36,6 +32,16 @@
 @media screen and (min-width: 600px) {
   .about {
     display: flex;
+  }
+
+  .about__container {
+    width: 50%;
+  }
+  .about__paragraph--me {
+    margin-top: 6vh;
+  }
+  .about--title {
+    margin-bottom: 15px;
   }
   .about--pics {
     width: 50%;
