--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -5,7 +5,7 @@
   position: absolute;
   left: 100%;
   top: 8vh;
-  width: 40%;
+  width: 200px;
   height: 100vh;
   display: flex;
   //flex-direction: row-reverse;
