add a generic card componant to fill the projects section with a mapped json file containing infirmations about my projets

--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 .menu {
   font-size: clamp(1rem, 4.8vw, 2rem);
-  background-color: beige;
+  background-color: $lightFont;
   position: absolute;
   left: 100%;
   top: 8vh;
