--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,8 +5,10 @@ $softGray: #c0c0c0;
 $white: #ffffff;
 
 $darkerMain: #123c54;
+$darkerMainTrans: rgba(18, 60, 84, 0.7);
 $darkMain: #184e5b;
 $accent: #ff6b6b;
 $main: #81a5ae;
 $lighterMain: #c0c0c0;
 $white: #ffffff;
+$lightFont: beige;
