--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -42,6 +42,7 @@
   }
   .about--title {
     margin-bottom: 15px;
+    font-size: clamp(1.5rem, 1.9vw, 2.5rem);
   }
   .about--pics {
     width: 50%;
