--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -59,3 +59,9 @@
   width: clamp(2rem, -0.3rem + 1vw, 3.5rem);
   height: 100%;
 }
+
+@media screen and (min-width: 600px) {
+  .projects--title {
+    font-size: clamp(1.5rem, 1.9vw, 2.5rem);
+  }
+}
