change to menu position from abs to fixed - solve the window sizing issue

--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -2,19 +2,17 @@
 .menu {
   font-size: clamp(1rem, 4.8vw, 2rem);
   background-color: $lightFont;
-  position: absolute;
+  position: fixed;
   left: 100%;
   top: 8vh;
   width: 200px;
   height: 100vh;
   display: flex;
-  //flex-direction: row-reverse;
   flex-direction: row;
 }
 
 .menu__list {
   list-style: none;
-  // padding-right: 7vw;
 }
 
 .menu__item:first-child {
