--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -25,27 +25,33 @@
 }
 
 .menu--open {
+  opacity: 1;
   animation: openMenu 0.5s ease 0s 1 normal forwards;
 }
 
 .menu--close {
+  opacity: 0;
   animation: closeMenu 0.5s ease 0s 1 normal forwards;
 }
 @keyframes openMenu {
   0% {
+    opacity: 0;
     transform: translateX(0);
   }
 
   100% {
+    opacity: 1;
     transform: translateX(-100%);
   }
 }
 @keyframes closeMenu {
   0% {
+    opacity: 1;
     transform: translateX(-100%);
   }
 
   100% {
+    opacity: 0;
     transform: translateX(0);
   }
 }
