add links to differents sections, change font style

--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -10,6 +10,7 @@
   align-items: flex-start;
 }
 .contact--title {
+  font-family: $titleFont;
   color: $lightFont;
   border-width: 0px 0px 3px 0px;
   border-style: solid;
