--- a/src/Components/Resume/Resume.scss
+++ b/src/Components/Resume/Resume.scss
@@ -13,6 +13,7 @@
   align-items: center;
 }
 .resume--title {
+  font-family: $titleFont;
   border-width: 0px 0px 3px 0px;
   border-style: solid;
   border-color: $accent;
