--- a/src/Components/Welcome/welcome.scss
+++ b/src/Components/Welcome/welcome.scss
@@ -6,6 +6,8 @@
   padding: 3vw;
 }
 .welcome__title {
+  font-size: 2rem;
+  font-family: $handFont;
   margin: 2vh 0;
   color: $lightFont;
 }
@@ -53,6 +55,11 @@
   background-color: $main;
   color: $lightFont;
   font-size: clamp(1rem, 1.2vw, 2rem);
+  display: flex;
+  justify-content: center;
+}
+.welcome--button:hover {
+  cursor: pointer;
 }
 
 @media screen and (min-width: 600px) {
@@ -72,7 +79,7 @@
     margin-top: -2vh;
   }
   .welcome__socialContainer {
-    width: 200px;
+    width: 150px;
     margin: 5vh 0;
   }
 }
