--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -8,10 +8,14 @@
 }
 
 .about--title {
+  font-family: $titleFont;
   border-width: 0px 0px 3px 0px;
   border-style: solid;
   border-color: $accent;
   display: inline;
+}
+.about--links {
+  cursor: pointer;
 }
 .about--h2 {
   font-size: 1.3em;
