--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -7,6 +7,7 @@
   color: $lightFont;
 }
 .projects--title {
+  font-family: $titleFont;
   margin-top: 20px;
   font-size: 1.5rem;
   border-width: 0px 0px 3px 0px;
