--- a/src/app.scss
+++ b/src/app.scss
@@ -5,7 +5,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: "Arial", sans-serif;
+  font-family: $textFont;
   overflow-x: hidden;
 }
 
