--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Allura&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 $navyBlue: #003366;
 $coral: #ff6b6b;
 $teal: #008080;
 $softGray: #c0c0c0;
 $white: #ffffff;
 
+//colors
 $darkerMain: #123c54;
 $darkerMainTrans: rgba(18, 60, 84, 0.7);
 $darkMain: #184e5b;
@@ -12,3 +15,8 @@ $main: #81a5ae;
 $lighterMain: #c0c0c0;
 $white: #ffffff;
 $lightFont: beige;
+
+//fonts
+$titleFont: "Roboto", sans-serif;
+$handFont: "Allura", cursive;
+$textFont: "Lato", sans-serif;
