--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -15,8 +15,11 @@
   border-color: $accent;
   display: inline;
 }
-.projects--container {
+.projects--p {
   margin-top: 3vh;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 0;
 }
 .projects__singleProject {
   margin-bottom: 10px;
@@ -64,5 +67,11 @@
 @media screen and (min-width: 600px) {
   .projects--title {
     font-size: clamp(1.5rem, 1.9vw, 2.5rem);
+  }
+  .projects--p {
+    display: none;
+  }
+  .projects--container {
+    margin-top: 3vh;
   }
 }
