--- a/src/Components/Welcome/welcome.scss
+++ b/src/Components/Welcome/welcome.scss
@@ -6,7 +6,7 @@
   padding: 3vw;
 }
 .welcome__title {
-  font-size: 2rem;
+  font-size: clamp(2rem, 4vw, 3rem);
   font-family: $handFont;
   margin: 2vh 0;
   color: $lightFont;
@@ -32,7 +32,7 @@
 
 .welcome__socialContainer {
   margin: 3vh 0;
-  width: 120px;
+  width: 180px;
   display: flex;
   flex-direction: column;
 }
@@ -45,7 +45,7 @@
 
 .welcome__socialContainer__iconsContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .welcome--button {
@@ -79,7 +79,7 @@
     margin-top: -2vh;
   }
   .welcome__socialContainer {
-    width: 150px;
+    width: 180px;
     margin: 5vh 0;
   }
 }
